src/main/java/com/example/property_management/error/exception/PropertyNotFoundException.java
package com.example.property_management.error.exception;

public class PropertyNotFoundException extends RuntimeException {

    public PropertyNotFoundException(String message) {super(message);}
}
